# ChangeLog for dev-perl/Class-Inspector
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Inspector/ChangeLog,v 1.56 2009/06/03 16:38:01 tove Exp $

  03 Jun 2009; Torsten Veller <tove@gentoo.org>
  -Class-Inspector-1.22.ebuild:
  Cleanup

*Class-Inspector-1.24 (21 Apr 2009)

  21 Apr 2009; Torsten Veller <tove@gentoo.org>
  +Class-Inspector-1.24.ebuild:
  Version bump

  05 Sep 2008; Raúl Porcel <armin76@gentoo.org>
  Class-Inspector-1.23.ebuild:
  alpha/ia64/sparc/x86 stable

  01 Aug 2008; Torsten Veller <tove@gentoo.org>
  -Class-Inspector-1.13.ebuild, -Class-Inspector-1.16.ebuild:
  Cleanup

*Class-Inspector-1.23 (01 Aug 2008)

  01 Aug 2008; Torsten Veller <tove@gentoo.org>
  +Class-Inspector-1.23.ebuild:
  Version bump

  13 Jun 2008; Raúl Porcel <armin76@gentoo.org>
  Class-Inspector-1.22.ebuild:
  alpha/ia64/sparc/x86 stable

*Class-Inspector-1.22 (29 Apr 2008)

  29 Apr 2008; Yuval Yaari <yuval@gentoo.org> +Class-Inspector-1.22.ebuild:
  Version bump

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> Class-Inspector-1.17.ebuild:
  Stable for HPPA too.

  13 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  Class-Inspector-1.17.ebuild:
  ppc. stable

  04 Dec 2007; Markus Rothe <corsair@gentoo.org>
  Class-Inspector-1.17.ebuild:
  Stable on ppc64; bug #198075

  10 Nov 2007; Samuli Suominen <drac@gentoo.org>
  Class-Inspector-1.17.ebuild:
  amd64 stable

  06 Oct 2007; Raúl Porcel <armin76@gentoo.org>
  Class-Inspector-1.17.ebuild:
  alpha/ia64/sparc/x86 stable

*Class-Inspector-1.17 (20 Aug 2007)

  20 Aug 2007; Yuval Yaari <yuval@gentoo.org> +Class-Inspector-1.17.ebuild:
  Version bump

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> Class-Inspector-1.16.ebuild:
  Stable on x86, bug #169152.

  14 Feb 2007; Markus Rothe <corsair@gentoo.org>
  Class-Inspector-1.16.ebuild:
  Added ~ppc64

  15 Jan 2007; Michael Cummings <mcummings@gentoo.org>