@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Class-Inspector
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Inspector/ChangeLog,v 1.56 2009/06/03 16:38:01 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Inspector/ChangeLog,v 1.57 2009/06/29 23:34:53 jer Exp $
+
+  29 Jun 2009; Jeroen Roovers <jer@gentoo.org> Class-Inspector-1.23.ebuild:
+  Stable for HPPA too.
 
   03 Jun 2009; Torsten Veller <tove@gentoo.org>
   -Class-Inspector-1.22.ebuild:
